--- a/src/keFuMenu.ejs
+++ b/src/keFuMenu.ejs
@@ -1773,7 +1773,7 @@
       </symbol>
     </svg>
     <div id="app" data-v-app="" style="background: #22275b">
-      <div data-v-1690b988="" class="ar-loading-view" style="display: none; --7688837a: &#39;Roboto&#39;, &#39;Inter&#39;, sans-serif;">
+      <div data-v-1690b988="" class="ar-loading-view" style="display: none; ">
         <div data-v-1690b988="" class="loading-wrapper">
           <div data-v-1690b988="" class="loading-animat">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -1879,7 +1879,7 @@
           </div>
         </div>
       </div>
-      <div data-v-28fadbec="" class="customer-container" style="--7688837a: &#39;Roboto&#39;, &#39;Inter&#39;, sans-serif;">
+      <div data-v-28fadbec="" class="customer-container" style="">
         <div data-v-28fadbec="" class="customer-container-header">
           <div data-v-58c5e826="" data-v-28fadbec="" class="navbar">
             <div data-v-58c5e826="" class="navbar-fixed" style="background: linear-gradient(90deg, rgb(43 50 112) 0%, rgb(43 50 112) 100%);">
@@ -1899,16 +1899,16 @@
             </div>
           </div>
           <div data-v-28fadbec="" class="customer-container-header-belly">
-            <img data-v-28fadbec="" alt="" class="" data-origin="https://www.bigdaddygame2.com/assets/png/customerBg-1f590d5d.png"
-            src="./index_files/customerBg-1f590d5d.png">
+            <img data-v-28fadbec="" alt="" class="" data-origin=""
+            src="">
           </div>
         </div>
         <div data-v-6a5413fb="" data-v-28fadbec="" class="content">
           <div data-v-6a5413fb="">
             <div data-v-6a5413fb="" class="content-item">
               <div data-v-6a5413fb="" class="content-item-title">
-                <img data-v-6a5413fb="" alt="" class="" data-origin="https://www.bigdaddygame2.com/assets/png/CStype3-7588d980.png"
-                src="./index_files/CStype3-7588d980.png">
+                <img data-v-6a5413fb="" alt="" class="" data-origin=""
+                src="">
                 <span data-v-6a5413fb="">
                   LiveChat
                 </span>
@@ -1919,8 +1919,8 @@
             </div>
             <div data-v-6a5413fb="" class="content-item" onclick="location.href='<%=telegram%>'">
               <div data-v-6a5413fb="" class="content-item-title">
-                <img data-v-6a5413fb="" alt="" class="" data-origin="https://www.bigdaddygame2.com/assets/png/CStype3-7588d980.png"
-                src="/images/icon_Telegram.webp">
+                <img data-v-6a5413fb="" alt="" class="" data-origin=""
+                src="">
                 <span data-v-6a5413fb="">
                   Telegram
                 </span>
@@ -1934,8 +1934,8 @@
       </div>
       <div class="customer" id="customerId" style="--7688837a: 'Roboto', 'Inter', sans-serif; --17a7a9f6: bahnschrift;"
       onclick="window.location='/keFuMenu'">
-        <img class="" data-origin="https://www.bigdaddygame2.com/assets/png/icon_sevice-1ca64bcf.png"
-        src="./index_files/icon_sevice-1ca64bcf.png">
+        <img class="" data-origin=""
+        src="">
       </div>
     </div>
     <div class="van-overlay" style="z-index: 2003; display: none;">
