--- a/src/views/account/login.ejs
+++ b/src/views/account/login.ejs
@@ -157,7 +157,7 @@
 
 <body style="font-size: 12px">
     <div id="app" data-v-app="" style="background: #22275b">
-      <div data-v-1690b988="" class="ar-loading-view" style="display: none; --7688837a: &#39;Roboto&#39;, &#39;Inter&#39;, sans-serif;">
+      <div data-v-1690b988="" class="ar-loading-view" style="display: none; ">
         <div data-v-1690b988="" class="loading-wrapper">
           <div data-v-1690b988="" class="loading-animat">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -263,7 +263,7 @@
           </div>
         </div>
       </div>
-      <div data-v-8752c961="" class="login__container" style="--7688837a: &#39;Roboto&#39;, &#39;Inter&#39;, sans-serif;">
+      <div data-v-8752c961="" class="login__container" style="">
         <div data-v-58c5e826="" data-v-8752c961="" class="navbar">
           <div data-v-58c5e826="" class="navbar-fixed" style="background: rgb(43 50 112);">
             <div data-v-58c5e826="" class="navbar__content">
@@ -281,8 +281,8 @@
                 <div data-v-187d09fa="" data-v-8752c961="">
                   <div data-v-187d09fa="" class="right">
                     <div data-v-187d09fa="" class="img">
-                      <img data-v-187d09fa="" class="" data-origin="https://www.bigdaddygame2.com/assets/png/en-4b649537.png"
-                      src="./index_files/en-4b649537.png">
+                      <img data-v-187d09fa="" class="" data-origin=""
+                      src="">
                     </div>
                     <span data-v-187d09fa="" class="lang-text">
                       EN
@@ -419,8 +419,8 @@
               </div>
               <div data-v-57d49070="" data-v-0ce8d964="" class="passwordInput__container">
                 <div data-v-57d49070="" class="passwordInput__container-label">
-                  <img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin="https://www.bigdaddygame2.com/assets/png/password-b827c2b3.png"
-                  src="./assets/png/forgetpassword-bd783446.png">
+                  <img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin=""
+                  src="">
                   <span data-v-57d49070="">
                     Password
                   </span>
@@ -473,8 +473,8 @@
               <div data-v-b9e16d43="" data-v-0ce8d964="" class="dialog inactive">
                 <div data-v-b9e16d43="" class="dialog__container" role="dialog" tabindex="0">
                   <div data-v-b9e16d43="" class="dialog__container-img">
-                    <img data-v-b9e16d43="" alt="" class="" data-origin="https://www.bigdaddygame2.com/assets/png/orderCancelWarn-93894f35.png"
-                    src="./index_files/orderCancelWarn-93894f35.png">
+                    <img data-v-b9e16d43="" alt="" class="" data-origin=""
+                    src="">
                   </div>
                   <div data-v-b9e16d43="" class="dialog__container-title">
                     <h1 data-v-b9e16d43="">
@@ -497,8 +497,8 @@
                       Contact customer service
                     </button>
                     <div data-v-0ce8d964="" class="dialogClose">
-                      <img data-v-0ce8d964="" class="dialogBtnClose" data-origin="https://www.bigdaddygame2.com/assets/png/close-7b93ef94.png"
-                      src="./index_files/close-7b93ef94.png">
+                      <img data-v-0ce8d964="" class="dialogBtnClose" data-origin=""
+                      src="">
                     </div>
                   </div>
                 </div>
@@ -527,8 +527,8 @@
               </div>
               <div data-v-57d49070="" data-v-5d3a4ff1="" class="passwordInput__container">
                 <div data-v-57d49070="" class="passwordInput__container-label">
-                  <img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin="https://www.bigdaddygame2.com/assets/png/password-b827c2b3.png"
-                  src="./index_files/password-b827c2b3.png">
+                  <img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin=""
+                  src="">
                   <span data-v-57d49070="">
                     Password
                   </span>
@@ -579,8 +579,8 @@
               <div data-v-b9e16d43="" data-v-5d3a4ff1="" class="dialog inactive">
                 <div data-v-b9e16d43="" class="dialog__container" role="dialog" tabindex="0">
                   <div data-v-b9e16d43="" class="dialog__container-img">
-                    <img data-v-b9e16d43="" alt="" class="" data-origin="https://www.bigdaddygame2.com/assets/png/orderCancelWarn-93894f35.png"
-                    src="./index_files/orderCancelWarn-93894f35.png">
+                    <img data-v-b9e16d43="" alt="" class="" data-origin=""
+                    src="">
                   </div>
                   <div data-v-b9e16d43="" class="dialog__container-title">
                     <h1 data-v-b9e16d43="">
