--- a/src/views/account/register.ejs
+++ b/src/views/account/register.ejs
@@ -84,7 +84,7 @@
 <body style="font-size: 12px;">
     <div id="app" data-v-app="" style="background: #22275b">
         <div data-v-1690b988="" class="ar-loading-view"
-            style="display: none; --7688837a: &#39;Roboto&#39;, &#39;Inter&#39;, sans-serif;">
+            style="display: none;">
             <div data-v-1690b988="" class="loading-wrapper">
                 <div data-v-1690b988="" class="loading-animat"><svg xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 200 200" width="200" height="200"
@@ -165,7 +165,7 @@
                 </div>
             </div>
         </div>
-        <div data-v-7e82aefe="" class="resgister__C" style="--7688837a: &#39;Roboto&#39;, &#39;Inter&#39;, sans-serif;">
+        <div data-v-7e82aefe="" class="resgister__C" style="">
             <div data-v-58c5e826="" data-v-7e82aefe="" class="navbar">
                 <div data-v-58c5e826="" class="navbar-fixed" style="background: rgb(43 50 112);">
                     <div data-v-58c5e826="" class="navbar__content">
@@ -182,8 +182,8 @@
                             <div data-v-187d09fa="" data-v-7e82aefe="">
                                 <div data-v-187d09fa="" class="right">
                                     <div data-v-187d09fa="" class="img"><img data-v-187d09fa="" class=""
-                                            data-origin="https://www.bigdaddygame2.com/assets/png/en-4b649537.png"
-                                            src="./index_files/en-4b649537.png"></div><span data-v-187d09fa=""
+                                            data-origin=""
+                                            src=""></div><span data-v-187d09fa=""
                                         class="lang-text">EN</span>
                                 </div>
                             </div>
@@ -306,8 +306,8 @@
                         </div>
                         <div data-v-23d378a6="" class="tip"></div>
                         <div data-v-57d49070="" data-v-23d378a6="" class="passwordInput__container">
-                            <div data-v-57d49070="" class="passwordInput__container-label"><img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin="https://www.bigdaddygame2.com/assets/png/password-b827c2b3.png"
-                                src="./assets/png/forgetpassword-bd783446.png"><span data-v-57d49070="">Set
+                            <div data-v-57d49070="" class="passwordInput__container-label"><img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin=""
+                                src=""><span data-v-57d49070="">Set
                                     password</span></div>
                             <div data-v-57d49070="" class="passwordInput__container-input">
 
@@ -324,7 +324,7 @@
                                 least 8 digits and must contain letters + numbers</span>
                         </div>
                         <div data-v-23d378a6="" class="register__container-invitation">
-                            <div data-v-23d378a6="" class="register__container-invitation__label"><img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin="https://www.bigdaddygame2.com/assets/png/password-b827c2b3.png"
+                            <div data-v-23d378a6="" class="register__container-invitation__label"><img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin=""
                                 src="./assets/png/invitation-5285cf0f.png"><span
                                     data-v-23d378a6="">Invite code</span></div>
                             <div data-v-23d378a6="" class="register__container-invitation__input">
@@ -336,8 +336,8 @@
                             </div>
                         </div>
                         <div data-v-23d378a6="" class="register__container-invitation" id="otp_div" style="margin-top: 2%;">
-                            <div data-v-23d378a6="" class="register__container-invitation__label"><img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin="https://www.bigdaddygame2.com/assets/png/password-b827c2b3.png"
-                                src="./assets/png/settingCenter-7f247f9f.png"><span
+                            <div data-v-23d378a6="" class="register__container-invitation__label"><img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin=""
+                                src=""><span
                                     data-v-23d378a6="">Enter Otp</span></div>
                             <div data-v-23d378a6="" class="register__container-invitation__input">
 
@@ -376,10 +376,10 @@
             </div>
         </div>
         <div class="customer" id="customerId"
-            style="--7688837a: &#39;Roboto&#39;, &#39;Inter&#39;, sans-serif; --17a7a9f6: bahnschrift;"
+            
             onclick="window.location='/keFuMenu'"><img class=""
-                data-origin="https://www.bigdaddygame2.com/assets/png/icon_sevice-1ca64bcf.png"
-                src="./index_files/icon_sevice-1ca64bcf.png">
+                data-origin=""
+                src="">
         </div>
     </div>
     
