--- a/src/views/keFuMenu.ejs
+++ b/src/views/keFuMenu.ejs
@@ -1451,7 +1451,7 @@
 
 	<div id="app" data-v-app="" style="background: #22275b">
 		<div data-v-1690b988="" class="ar-loading-view"
-			style="display: none; --7688837a: &#39;Roboto&#39;, &#39;Inter&#39;, sans-serif;">
+			style="display: none; ">
 			<div data-v-1690b988="" class="loading-wrapper">
 				<div data-v-1690b988="" class="loading-animat"><svg xmlns="http://www.w3.org/2000/svg"
 						xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 200 200" width="200" height="200"
@@ -1533,7 +1533,7 @@
 			</div>
 		</div>
 		<div data-v-28fadbec="" class="customer-container"
-			style="--7688837a: &#39;Roboto&#39;, &#39;Inter&#39;, sans-serif;">
+			style="">
 			<div data-v-28fadbec="" class="customer-container-header">
 				<div data-v-58c5e826="" data-v-28fadbec="" class="navbar">
 					<div data-v-58c5e826="" class="navbar-fixed"
@@ -1552,8 +1552,8 @@
 					</div>
 				</div>
 				<div data-v-28fadbec="" class="customer-container-header-belly"><img data-v-28fadbec="" alt="" class=""
-						data-origin="https://www.bigdaddygame2.com/assets/png/customerBg-1f590d5d.png"
-						src="./index_files/customerBg-1f590d5d.png"></div>
+						data-origin=""
+						src=""></div>
 			</div>
 			<div data-v-6a5413fb="" data-v-28fadbec="" class="content">
 				<div data-v-6a5413fb="">
@@ -1561,8 +1561,8 @@
 					<a href="/wingochat">
 						<div data-v-6a5413fb="" class="content-item">
 							<div data-v-6a5413fb="" class="content-item-title"><img data-v-6a5413fb="" alt="" class=""
-									data-origin="https://www.bigdaddygame2.com/assets/png/CStype3-7588d980.png"
-									src="./index_files/CStype3-7588d980.png"><span data-v-6a5413fb="">WingoChat</span>
+									data-origin=""
+									src=""><span data-v-6a5413fb="">WingoChat</span>
 							</div><i data-v-6a5413fb="" class="van-badge__wrapper van-icon van-icon-arrow"
 								style="color: rgb(168, 168, 168); font-size: 18px;"></i>
 						</div>
@@ -1570,8 +1570,8 @@
 
 					<div data-v-6a5413fb="" class="content-item" onclick="location.href='<%=telegram%>'">
 						<div data-v-6a5413fb="" class="content-item-title"><img data-v-6a5413fb="" alt="" class=""
-								data-origin="https://www.bigdaddygame2.com/assets/png/CStype3-7588d980.png"
-								src="/images/icon_Telegram.webp"><span data-v-6a5413fb="">Telegram</span></div><i
+								data-origin=""
+								src=""><span data-v-6a5413fb="">Telegram</span></div><i
 							data-v-6a5413fb="" class="van-badge__wrapper van-icon van-icon-arrow"
 							style="color: rgb(168, 168, 168); font-size: 18px;"></i>
 					</div>
@@ -1582,8 +1582,8 @@
 		<div class="customer" id="customerId"
 			style="--7688837a: 'Roboto', 'Inter', sans-serif; --17a7a9f6: bahnschrift;"
 			onclick="window.location='/keFuMenu'"><img class=""
-				data-origin="https://www.bigdaddygame2.com/assets/png/icon_sevice-1ca64bcf.png"
-				src="./index_files/icon_sevice-1ca64bcf.png"></div>
+				data-origin=""
+				src=""></div>
 	</div>
 
 	
