--- a/src/views/member/redenvelopes.ejs
+++ b/src/views/member/redenvelopes.ejs
@@ -77,7 +77,7 @@
 
 
   <div id="app" data-v-app="">
-    <div data-v-3b4d4aab="" class="redeem-container" style="--7688837a: &#39;Roboto&#39;, &#39;Inter&#39;, sans-serif;">
+    <div data-v-3b4d4aab="" class="redeem-container" >
       <div data-v-3b4d4aab="" class="redeem-container-header">
         <div data-v-58c5e826="" data-v-3b4d4aab="" class="navbar">
           <div data-v-58c5e826="" class="navbar-fixed"
@@ -95,8 +95,8 @@
         </div>
         <div data-v-3b4d4aab="" class="redeem-container-header-belly">
           <img data-v-3b4d4aab="" alt="" class=""
-            data-origin="https://www.bigdaddygame2.com/assets/png/gift-0e49be1a.png"
-            src="./index_files/gift-0e49be1a.png">
+            data-origin=""
+            src="">
         </div>
       </div>
       <div data-v-3b4d4aab="" class="redeem-container-content">
@@ -111,10 +111,10 @@
       </div>
     </div>
     <div class="customer" id="customerId"
-      style="--7688837a: &#39;Roboto&#39;, &#39;Inter&#39;, sans-serif; --17a7a9f6: bahnschrift;"
+      
       onclick="window.location='/keFuMenu'">
-      <img class="" data-origin="https://www.bigdaddygame2.com/assets/png/icon_sevice-1ca64bcf.png"
-        src="./index_files/icon_sevice-1ca64bcf.png">
+      <img class="" data-origin=""
+        src="">
     </div>
   </div>
   <div class="van-overlay" style="z-index: 2003; display: none;">
