--- a/src/views/nav.ejs
+++ b/src/views/nav.ejs
@@ -23,7 +23,7 @@
 </style>
 
   <div data-v-76c247f8="" class="tabbar__container"
-    style="--7688837a: &#39;Roboto&#39;, &#39;Inter&#39;, sans-serif;">
+    style="">
     <div data-v-76c247f8="" class="tabbar__container-item" onclick="window.location='/home'">
       <svg data-v-76c247f8="" xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 56 56"
         fill="none" class="">
