--- a/src/views/promotion/subordinates.ejs
+++ b/src/views/promotion/subordinates.ejs
@@ -10,7 +10,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://ossimg.Big-Mumadmin888.com/bigmumbai/other/h5setting_20230814170913idlb.ico"
+      href=""
     />
     <meta name="google" content="notranslate" />
     <meta name="robots" content="noindex,nofollow" />
@@ -20,7 +20,7 @@
     />
 
     <link rel="manifest" />
-    <title>BigMumbai</title>
+    <title>Tiranga</title>
     <link rel="stylesheet" href="/assets/css/modules-5dd73da0.css" />
     <link rel="stylesheet" href="/assets/css/page-activity-a00a89c0.css" />
     <link rel="stylesheet" href="/assets/css/index-f3f1dfe8.css" />
